AuctionHouse_WebApplication/src/main/java/com/example/auctionhouse_webapplication/error/UserRelatedException.java
package com.example.auctionhouse_webapplication.error;

public class UserRelatedException extends RuntimeException {

    public UserRelatedException(String message) {
        super(message);
    }

}
